2008-03-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	* sys/dvb/parsechannels.c:
	Add DVB-C support. Special thanks to Christian Schaller
	for a testing ground.

2008-02-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtsparse.c:
	Only send PMTs to program pads that the PMT is for even if
	on same pid.
	As a by-product, we now no longer hardcode any psi pid numbers.
	Also remove pcr stream from old pmt when we apply a new pmt.

2008-02-28  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	Map Date-Time and GPS tags and Convert from EXIF to XMP Datatime as
	local time (those changes has been done in previous comit but had to
	be revert in 2008-02-10 due to frozen)

2008-02-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/camutils.c:
	Remove the G_VALUE_HOLDS_BOXED checks. They were
	only added to help debug the data corruption.

2008-02-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/camutils.c:
	Don't free the program descriptors, this structure
	containing them is still stored after.
	Fixes data corruption.

2008-02-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/camutils.c:
	Extra checks to prevent data corruption/segfaults.

2008-02-26  Stefan Kost  <ensonic@users.sf.net>

	* ext/nas/nassink.c:
	  Fix build warning by using portable API.

2008-02-26  Stefan Kost  <ensonic@users.sf.net>

	* gst/selector/gstoutputselector.c:
	  Fix changing to same pad twice before a chain call.	  

2008-02-26  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Daniel Fischer <dan at f3c dot com>

	* configure.ac:
	* ext/dc1394/gstdc1394.c: (gst_dc1394_change_state),
	(gst_dc1394_get_cam_caps), (gst_dc1394_open_cam_with_best_caps):
	* ext/dc1394/gstdc1394.h: